--- a/views/friendrequest.ejs
+++ b/views/friendrequest.ejs
@@ -53,7 +53,8 @@
      
   </div>
    <div  class="four wide column">
-              <form  action = "/accept/<%=request._id%>/<%=request.username%>" method = "post"> 
+              <form  action = "/accept/<%=request.id%>/<%=request.username%>" 
+                    method = "post"> 
              <button id="add" class="ui  medium  <%=request.Color%> button"><%=request.Status%></button> 
                 
              </form>
