--- a/views/community.ejs
+++ b/views/community.ejs
@@ -22,8 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:500" rel="stylesheet">
   </head>
 
-<body style="background:url(https://i.imgur.com/vkpa3gg.png);            
-              background-attachment: fixed;">
+<body>
 
   <nav style="background-color:black;
               border-bottom:dashed 4px purple;
@@ -105,8 +104,10 @@
 <%questions.forEach(function(question){%>
   <div class="container">
     <div class="col col-lg-12" style="background-color:white;
-                                  border:solid 2px #ccc;
-                                  border-radius:5px;">
+                                  border:solid 1px #ccc;;
+                                  box-shadow: 2px 4px 8px 0 rgba(0,0,0,0.2);
+                                  margin-top:20px;
+                                  ">
 
   <p style="font-size:20px;font-weight:bold;font-family: 'Work Sans', sans-serif;">
     <i style="     color:purple;
